<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.fengxinlin.nanodegreep10.MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/namehint"
        android:id="@+id/productName"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price_of_the_product"
        android:inputType="numberDecimal"
        android:id="@+id/productPrice" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/productQuantity"
        android:inputType="number"
        android:hint="@string/avaialable_quantities_of_the_product"
        android:layout_gravity="center_horizontal" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:id="@+id/imageViewError"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:visibility="invisible" />

        <ImageView
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:id="@+id/imageSelected"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
    <Button
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size2"
        android:text="Upload Image"
        android:hint="Name"
        android:id="@+id/productImage"
        android:onClick="btnImageOnClick"
        android:layout_gravity="center_horizontal" />


    <Button
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size2"
        android:layout_gravity="center_vertical|center_horizontal"
        android:text="@string/submit"
        android:id="@+id/addButton" />

</LinearLayout>
