<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/small_padding">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1.25"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.75"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_padding"
                android:text="@string/nametitle"
                android:textStyle="bold"
                android:textSize="@dimen/large_font" />

            <TextView
                android:id="@+id/productName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.44"
                android:layout_marginBottom="@dimen/small_padding"
                android:text="New Text"
                android:layout_marginLeft="@dimen/mid_padding"
                android:textSize="@dimen/large_font" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.75"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pricetitle"
                android:layout_marginRight="@dimen/mid_padding"
                android:textStyle="bold"
                android:textSize="@dimen/small_font" />

            <TextView
                android:id="@+id/productPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.40"
                android:text="New Text"
                android:textColor="#10ba0b"
                android:textSize="@dimen/small_font" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/availabletitle"
                android:textStyle="bold"
                android:textSize="@dimen/small_font" />

            <TextView
                android:id="@+id/productAvailable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:textColor="#10ba0b"
                android:layout_marginLeft="@dimen/mid_padding"
                android:textSize="@dimen/small_font" />

        </LinearLayout>


    </LinearLayout>
    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:orientation="vertical"
        android:padding="5dp"
        android:layout_weight="0.28">


        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sale"
            android:id="@+id/listItemButton"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

</LinearLayout>